# Crypto_Info_Depictor

./: .gitignore  README.md  pyproject.toml
crypto_proj/: crypto_flask.py  crypto_logic.py
crypto_proj/my_crypto_proj/: crypto_flask.py  crypto_logic.py
crypto_proj/my_crypto_proj/static/css/: main.css
crypto_proj/my_crypto_proj/templates/: index.html  main.css
crypto_proj/static/css/: main.css
crypto_proj/templates/: index.html
docs/templates/: index.html
tests/: test_crypto_proj.py
