[tool.poetry]
name = "crypto_proj"
version = "0.1.0"
description = ""
authors = ["omanduj <omanduj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
Flask = "^2.0.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
